Fix signup section layout and alignment

--- a/styles.css
+++ b/styles.css
@@ -194,9 +194,11 @@ ul {
 .signup {
     background-color: #3882F6;
     display: flex;
-    flex-direction: column;
-    height: 300px;
+    flex-direction: row;
+    height: 150px;
     border-radius: 16px;
-    padding: 24px 48px;
+    padding: 0px 84px;
     flex: 1;
+    align-items: center;
+    justify-content: space-between;
 }
